<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".MainActivity">



        <ImageView
            android:id="@+id/placeholder"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/nutriscore"
            android:layout_width="78dp"
            android:layout_height="42dp"
            android:src="@drawable/nutriscore"
            app:layout_constraintTop_toBottomOf="@id/placeholder"
            app:layout_constraintRight_toRightOf="@id/placeholder"/>

        <TextView
            android:id="@+id/petits_pois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="Petits pois"
            app:layout_constraintTop_toBottomOf="@id/placeholder"
            app:layout_constraintLeft_toLeftOf="@id/placeholder" />

        <TextView
            android:id="@+id/cassegrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="15dp"
            android:text="Cassegrain"
            app:layout_constraintTop_toBottomOf="@id/petits_pois"
            app:layout_constraintLeft_toLeftOf="@id/petits_pois"
             />

        <TextView
            android:id="@+id/barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/barcode"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/cassegrain"
            app:layout_constraintLeft_toLeftOf="@id/cassegrain"/>

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/barcode"
            app:layout_constraintLeft_toLeftOf="@id/barcode"/>

        <TextView
            android:id="@+id/sold_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sold_in"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/quantity"
            app:layout_constraintLeft_toLeftOf="@id/quantity"/>

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ingredients"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/sold_in"
            app:layout_constraintLeft_toLeftOf="@id/sold_in"/>

        <TextView
            android:id="@+id/allergenic_substances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ingredients"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/ingredients"
            app:layout_constraintLeft_toLeftOf="@id/ingredients"/>

        <TextView
            android:id="@+id/additives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/additives"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/allergenic_substances"
            app:layout_constraintLeft_toLeftOf="@id/allergenic_substances"/>

</androidx.constraintlayout.widget.ConstraintLayout>