<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/details_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/button1"
        android:layout_width="20dip"
        android:layout_height="20dip"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_nutrition_colors"
        android:backgroundTint="@color/nutrient_level_low"
        app:layout_constraintTop_toBottomOf="@id/details_title"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/matieres_grasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/nutrition_facts_lipids"
        app:layout_constraintLeft_toLeftOf="@id/details_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_title" />

    <View
        android:id="@+id/button3"
        android:layout_width="20dip"
        android:layout_height="20dip"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_nutrition_colors"
        android:backgroundTint="@color/nutrient_level_low"
        app:layout_constraintTop_toBottomOf="@id/matieres_grasses"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/acidite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/nutrition_facts_fatty_acid"
        app:layout_constraintLeft_toLeftOf="@id/matieres_grasses"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/matieres_grasses" />

    <View
        android:id="@+id/button2"
        android:layout_width="20dip"
        android:layout_height="20dip"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/nutrient_level_moderate"
        android:background="@drawable/ic_nutrition_colors"
        app:layout_constraintTop_toBottomOf="@id/acidite"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sucre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/nutrition_facts_carbohydrates"
        app:layout_constraintLeft_toLeftOf="@id/acidite"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@id/acidite" />

    <View
        android:id="@+id/button5"
        android:layout_width="20dip"
        android:layout_height="20dip"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/nutrient_level_high"
        android:background="@drawable/ic_nutrition_colors"
        app:layout_constraintTop_toBottomOf="@id/sucre"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/nutrition_facts_salt"
        app:layout_constraintLeft_toLeftOf="@id/sucre"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@id/sucre" />


</androidx.constraintlayout.widget.ConstraintLayout>


